# AiOps

./: .dockerignore  .env.example  .gitignore  =0.19.0  =41.0.0  AGENT_TOOL_EXECUTION_BUG_FINDINGS.md  CONTRIBUTING.md  JIRA_INTEGRATION_WITH_HMAC_PROXY.md  JIRA_MCP_API_DEPRECATION_FINDINGS.md  JIRA_MCP_SERVER_SWITCH_COMPLETED.md  JIRA_MCP_SETUP_GUIDE.md  JIRA_WEBHOOK_QUICK_START.md  JIRA_WEBHOOK_SETUP_GUIDE.md  MCP_SERVER_ACTIVATION_REQUIRED.md  POSTMAN_WEBHOOK_GUIDE.md  README.md  Ticket_Enhancer_Webhook.postman_collection.json  alembic.ini  alert-rules.yml  alertmanager.yml  bandit-report.json  docker-compose.yml  failures-list.txt  generate_postman_signatures.py  get_correct_curl.py  package-lock.json  package.json  parse_bandit_report.py  prometheus.yml  pyproject.toml  pytest.ini  render.yaml  requirements-frozen.txt  sbom-packages.json  test_agent_direct.py  test_execution.json  test_jira_comment.json  test_mcp_webhook.py  test_new_agent_webhook.py  test_ticker_enhancer.py  (+4 more)
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: bmad_config.md  code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.streamlit/: config.toml  secrets.toml.template
alembic/: env.py
alembic/versions/: 000000000001_enable_extensions.py  001_add_budget_enforcement.py  002217a1f0a8_add_jira_fields_to_tenant_configs.py  002_add_llm_provider_tables.py  003_add_fallback_chain_tables.py  004_add_byok_columns.py  005_add_agent_test_executions_table.py  006_add_agent_memory_schema.py  007_remove_provider_tables.py  008_fix_agent_test_executions_tenant_fk.py  009_add_mcp_servers_table.py  (+33 more)
config/: litellm-config.backup.2025-11-07T01-00-32.yaml  litellm-config.yaml
dashboards/: mcp-tracing-dashboard.json  operations-center.json
docker/: .dockerignore  api.production.dockerfile  backend.dockerfile  entrypoint.sh  migrations.production.dockerfile  streamlit.dockerfile  worker.production.dockerfile
docs/: PRD.md  WEBHOOK-COMPLETION-SUMMARY.md  WEBHOOK-HMAC-UI-IMPLEMENTATION.md  admin-ui-deployment-checklist.md  admin-ui-guide.md  admin-ui-setup.md  agent-performance-dashboard-guide.md  agent-testing-guide.md  api-docs.html  api-documentation-setup.md  architecture.md  backlog.md  bmm-research-technical-2025-10-31.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-10-31.md  brainstorming-session-results-2025-11-05.md  byok-setup-guide.md  changelog.md  ci-cd-pipeline-guide.md  cicd-testing-workflow.md  database-schema.md  deployment.md  documentation-review-checklist.md  email-launch-announcement.md  end-to-end-enhancement-workflow.md  epics-nextjs-feature-parity-completion.md  epics-nextjs-ui-migration.md  epics.md  github-branch-protection.md  hmac-proxy-dynamic-routing.md  implementation-readiness-report-2025-10-31.md  implementation-readiness-report-2025-11-02.md  integration-testing-guide.md  live-demo-template.md  mcp-health-monitoring-guide.md  mcp-tool-invocation-guide.md  memory-configuration-guide.md  migration-guide.md  nextjs-ui-deployment-guide.md  nextjs-ui-migration-tech-spec-v2.md  (+27 more)
hmac-proxy/: Dockerfile  app.py  requirements.txt
k8s/: alertmanager-deployment.yaml  alertmanager-secrets.template.yaml  clusterrole-platform-admin.yaml  clusterrolebinding-platform-admin.yaml  configmap.yaml  deployment-api.yaml  deployment-postgres.yaml  deployment-redis.yaml  deployment-worker.yaml  grafana-dashboard-baseline-metrics.yaml  grafana-dashboard-operations.yaml  grafana-dashboard-provision.yaml  grafana-dashboard.yaml  grafana-datasource-provision.yaml  grafana-datasource.yaml  grafana-deployment.yaml  hpa-worker.yaml  ingress.yaml  jaeger-deployment.yaml  namespace.yaml  prometheus-alert-rules.yaml  prometheus-config.yaml  prometheus-deployment.yaml  secrets.yaml.example  service-api.yaml  service-postgres.yaml  service-redis.yaml  streamlit-admin-configmap.yaml  streamlit-admin-deployment.yaml  streamlit-admin-ingress.yaml  streamlit-admin-service.yaml  streamlit-rbac.yaml  test-deployment.sh  uptrace-secret.yaml
nextjs-ui/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  jest.setup.js  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-validation.mjs
nginx/: nginx.conf
scripts/: RLS-SETUP-README.md  analyze-test-failures.py  check-file-size.py  ci-baseline-check.py  ci-baseline-config.yaml  complete-rls-setup.sh  create-tenant-namespace.sh  create_admin_user.py  discover_mcp_tools.py  export_provider_data.py  file-size-config.yaml  fix_missing_virtual_keys.py  import_tickets.py  production-smoke-test.sh  production-validation-test.sh  seed_prompt_templates.sql  setup-litellm-env.sh  setup-streamlit-auth.sh  switch_jira_mcp_server.py  tenant-isolation-validation.sh  tenant-onboarding-test.sh  test-health-check.py  test-litellm-fallback.sh  test-litellm-retry.sh  validate-ui-backend-integration.sh
src/: config.py  exceptions.py  main.py
tests/: README-plugins.md  README.md  cleanup_test_users.py  conftest.py
(+1572 files in other folders)
