[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Multi-tenant AI enhancement platform for MSP technicians"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "celery[redis]>=5.3.4",
    "httpx[http2]>=0.25.2",
    "httpx-sse>=0.4.0",
    "loguru>=0.7.2",
    "langgraph>=0.6.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "openai>=1.3.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-celery>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "streamlit>=1.44.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "cryptography>=43.0.0",
    "kubernetes>=29.0.0",
    "psutil>=5.9.0",
    "openapi-pydantic>=0.4.0",
    "fastmcp>=2.0.0",
    "cachetools>=5.3.0",
    # Story 1B: Authentication dependencies
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "zxcvbn>=4.4.28",
    "bcrypt>=4.0.0,<5.0.0",  # Pin to 4.x for passlib compatibility
    # Story 1C: API endpoints dependencies
    "slowapi>=0.1.9",  # Rate limiting middleware
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.22.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-cov>=7.0.0",
    "respx>=0.21.0",
    "fakeredis>=2.20.0",
    "playwright>=1.47.0",
    "pytest-playwright>=0.5.2",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "types-cachetools>=5.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests as async (for async test functions)",
    "unit: Unit tests (fast, isolated, mocked dependencies)",
    "integration: Integration tests (real dependencies: database, Redis)",
    "plugin: Plugin-related tests (all layers - unit and integration)",
    "e2e: End-to-end UI workflow tests (Playwright browser automation)",
    "smoke: Smoke tests for critical business workflows (Story 12.6)",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic/versions", ".venv"]
skips = ["B101"]  # Skip assert_used check (used in tests excluded by path anyway)
# Report medium and high severity issues
severity = "MEDIUM"
